--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,20 +1,20 @@
 {
-    "manifest_version": 3,
-    "name": "Amazon Price Tracker",
-    "version": "1.0",
-    "description": "Extensión para monitorizar precios de productos de Amazon.",
-    "permissions": ["activeTab", "contextMenus"],
-    "background": {
-        "service_worker": "background.js"
-    },
-    "content_scripts": [
-        {
-            "matches": ["*://*.amazon.com/*", "*://*.amazon.es/*"],
-            "js": ["content.js"]
-        }
-    ],
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": "icon.png"
+  "manifest_version": 3,
+  "name": "Amazon Price Tracker",
+  "version": "1.0",
+  "description": "Extensión para monitorizar precios de productos de Amazon.",
+  "permissions": ["activeTab", "contextMenus", "storage"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*.amazon.com/*", "*://*.amazon.es/*"],
+      "js": ["content.js"]
     }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
+  }
 }
